
$Id: History,v 1.27 2002-01-11 08:46:37 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

   Please keep a summary of these message in geometry/History!

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

 Jan 10  2002  Gabriele Cosmo       geom-solid-bool-V04-00-00
  - Moved all verbosity mode warnings to G4BOOLDEBUG and commented exceptions.
  - Activated G4BOOLDEBUG mechanism in GNUmakefile.
  - Fixed unit tests.

 Nov 08  2001  Gabriele Cosmo       geom-solid-bool-V03-02-02
  - Fix for verbosity in G4ReflectionFactory.cc. Reduced of one level.

 Oct 18  2001  Gabriele Cosmo       geom-solid-bool-V03-02-01
  - Introduced first implementation of classes G4ReflectedSolid and
    G4ReflectionFactory for reflections of positioned volumes
    (courtesy of V.Grichine and I.Hrivnacova).
  - Fixed bug in G4ReflectedSolid::CreatePolyhedron().

 Aug 13  2001  Vladimir Grichine    geom-solid-bool-V03-02-00
  - Introduced G4BOOLDEBUG flag and replaced G4Exception statements with
    simple warnings to G4cerr for rare occurences of anomalous conditions.

 May 30  2001  Vladimir Grichine    geom-solid-bool-V03-01-00
  - G4IntersectionSolid: fix in DistanceToIn(p,v) resolving bug observed
    in problem report #153.
