@@ -1,5 +1,5 @@
 
-$Id: History,v 1.27 2002-01-11 08:46:37 gcosmo Exp $
+$Id: History,v 1.28 2002-02-07 13:15:47 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+ Feb 07  2002  Gabriele Cosmo       geom-bool-V04-00-01
+  - G4ReflectionFactory.cc: fixed bug causing repetition of daughter volumes.
 
  Jan 10  2002  Gabriele Cosmo       geom-solid-bool-V04-00-00
   - Moved all verbosity mode warnings to G4BOOLDEBUG and commented exceptions.
